--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
     "node": "^19.4.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pg": "^8.9.0",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0"
   },
   "name": "mongo_node",
   "description": "Node+MongoDb+NasaApi",
